force-app/main/default/objects/Competitor__c/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <label>Competitor</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Aderant</fullName>
            </value>
            <value>
                <fullName>Aderant Expert Matter</fullName>
            </value>
            <value>
                <fullName>Aderant Expert Time Entry</fullName>
            </value>
            <value>
                <fullName>Aderant Found Time</fullName>
            </value>
            <value>
                <fullName>Apperio</fullName>
            </value>
            <value>
                <fullName>BDP</fullName>
            </value>
            <value>
                <fullName>Bellefield iTimeKeep</fullName>
            </value>
            <value>
                <fullName>Big Hand</fullName>
            </value>
            <value>
                <fullName>BizTalk</fullName>
            </value>
            <value>
                <fullName>BvD</fullName>
            </value>
            <value>
                <fullName>CAEL from Elevate</fullName>
            </value>
            <value>
                <fullName>Carpe Diem Classic</fullName>
            </value>
            <value>
                <fullName>Carpe Diem Enterprise</fullName>
            </value>
            <value>
                <fullName>Carpe Diem Next Generation</fullName>
            </value>
            <value>
                <fullName>Clocktimizer</fullName>
            </value>
            <value>
                <fullName>ContactEase</fullName>
            </value>
            <value>
                <fullName>Content Pilot LLC</fullName>
            </value>
            <value>
                <fullName>CoSine</fullName>
            </value>
            <value>
                <fullName>DocAuto</fullName>
            </value>
            <value>
                <fullName>Do Nothing - Stay with current solution</fullName>
            </value>
            <value>
                <fullName>Elegrity</fullName>
            </value>
            <value>
                <fullName>Elite</fullName>
            </value>
            <value>
                <fullName>Elite 3E</fullName>
            </value>
            <value>
                <fullName>Elite 3E Time Entry</fullName>
            </value>
            <value>
                <fullName>Elite WebView</fullName>
            </value>
            <value>
                <fullName>Evaluate from DW Reporting</fullName>
            </value>
            <value>
                <fullName>Foundation Software Group</fullName>
            </value>
            <value>
                <fullName>Fulcrum/SAP</fullName>
            </value>
            <value>
                <fullName>Ideate from Wilson</fullName>
            </value>
            <value>
                <fullName>iManage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>