force-app/main/default/objects/Competitor__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Conflicts</fullName>
            </value>
            <value>
                <fullName>CRM</fullName>
            </value>
            <value>
                <fullName>Experience</fullName>
            </value>
            <value>
                <fullName>Flow</fullName>
            </value>
            <value>
                <fullName>Intake</fullName>
            </value>
            <value>
                <fullName>Intake - Cloud</fullName>
                <isActive>false</isActive>
                <label>Intake - Cloud</label>
            </value>
            <value>
                <fullName>Integrate</fullName>
            </value>
            <value>
                <fullName>LegalKey</fullName>
                <isActive>false</isActive>
                <label>LegalKey</label>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Terms</fullName>
            </value>
            <value>
                <fullName>TFG - Other</fullName>
                <isActive>false</isActive>
                <label>TFG - Other</label>
            </value>
            <value>
                <fullName>Third Party Product - D&amp;B</fullName>
                <isActive>false</isActive>
                <label>Third Party Product - D&amp;B</label>
            </value>
            <value>
                <fullName>Time</fullName>
            </value>
            <value>
                <fullName>Time - Cloud</fullName>
                <isActive>false</isActive>
                <label>Time - Cloud</label>
            </value>
            <value>
                <fullName>Walls</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>